@@ -268,8 +268,10 @@ td.draggable.draggingHook {
     padding: 0.5em 1em;
 }
 
+/*
 #pfgWidgetWrapper {
     position: fixed;
     top: 300px;
     right: 100px;
 }
+*/
