@@ -3,6 +3,9 @@ Change History
 
 1.7.12 (unreleased)
 
+- Don't fix position quickedit toolbox unless window is tall enough to display.
+  [smcmahon]
+
 - Don't fail on install if the kupu tool doesn't have getPortalTypesForResourceType.
   [smcmahon]
 
